app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: traefik-network-redirect@kubernetescrd,traefik-network-security@kubernetescrd
  name: my-app-ingress
  namespace: my-app
#spec:
# entryPoints:
#   - web
#   - websecure
spec:
  rules:
    - host: k8s.cic-webpro.com
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - k8s.cic-webpro.com
      secretName: k8s.cic-webpro.com-tls
